fixtures/semantic/invalid/11-vr-s2-opacity-range.fl
component SurfaceOpacity {
  surface {
    opacity: 2
  }
}
